[project]
name = "unimib-moodle-scraper"
version = "0.1.0"
description = "Python CLI tool to download all content from UNIMIB's Moodle E-Learning platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "black>=24.10.0",
    "docopt-ng>=0.9.0",
    "enlighten>=1.13.0",
    "moodlepy>=0.24.1",
    "requests>=2.32.3",
]
